<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jasper.Hex.HowTo1">

    <ImageButton
        android:id="@+id/BackArrow"
        style="@android:style/Widget.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/back_arrow"
        android:cropToPadding="false"
        android:onClick="TitleScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <ImageButton
        android:id="@+id/ForArrow"
        style="@android:style/Widget.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/back_arrow"
        android:cropToPadding="false"
        android:onClick="HowTo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_for" />

    <ImageView
        android:id="@+id/left_line"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/hex_outline"
        app:layout_constraintBottom_toTopOf="@+id/how_to2"
        app:layout_constraintEnd_toStartOf="@+id/mid_line"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/how_to1"
        app:srcCompat="@drawable/hex_outline" />

    <ImageView
        android:id="@+id/mid_line"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/hex_outline"
        app:layout_constraintEnd_toStartOf="@+id/right_line"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/left_line"
        app:layout_constraintTop_toTopOf="@+id/left_line"
        app:srcCompat="@drawable/hex_outline" />

    <ImageView
        android:id="@+id/right_line"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/hex_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mid_line"
        app:layout_constraintTop_toTopOf="@+id/mid_line"
        app:srcCompat="@drawable/hex_outline" />

    <ImageButton
        android:id="@+id/left_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/color_hex"
        android:onClick="changeColorL"
        app:layout_constraintEnd_toStartOf="@+id/mid_fill"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/left_line"
        app:srcCompat="@drawable/hex_fill" />

    <ImageButton
        android:id="@+id/right_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/color_hex"
        android:onClick="changeColorR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mid_fill"
        app:layout_constraintTop_toTopOf="@+id/mid_fill"
        app:srcCompat="@drawable/hex_fill" />

    <ImageView
        android:id="@+id/left_fill"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/color_hex"
        android:src="@drawable/hex_fill"
        app:layout_constraintStart_toStartOf="@+id/left_play"
        app:layout_constraintTop_toTopOf="@+id/left_play" />

    <ImageView
        android:id="@+id/mid_fill"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/color_hex"
        app:layout_constraintEnd_toStartOf="@+id/right_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/left_button"
        app:layout_constraintTop_toTopOf="@+id/left_button"
        app:srcCompat="@drawable/hex_fill" />

    <ImageView
        android:id="@+id/right_fill"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/color_hex"
        android:src="@drawable/hex_fill"
        app:layout_constraintStart_toStartOf="@+id/right_play"
        app:layout_constraintTop_toTopOf="@+id/right_play" />

    <ImageView
        android:id="@+id/left_play"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/player_hex"
        app:layout_constraintStart_toStartOf="@+id/left_button"
        app:layout_constraintTop_toTopOf="@+id/left_button"
        app:srcCompat="@drawable/hex_player" />

    <ImageView
        android:id="@+id/right_play"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/player_hex"
        app:layout_constraintStart_toStartOf="@+id/right_button"
        app:layout_constraintTop_toTopOf="@+id/right_button"
        app:srcCompat="@drawable/hex_player" />

    <TextView
        android:id="@+id/how_to1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/HowTo1"
        android:text="@string/HowTo1"
        android:textAlignment="center"
        android:textColor="@color/Purple"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/left_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/how_to2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HowTo1_2"
        android:textAlignment="center"
        android:textColor="@color/Purple"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/demo_play"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/left_line" />

    <ImageView
        android:id="@+id/demo_line"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/hex_outline"
        android:src="@drawable/hex_outline"
        app:layout_constraintStart_toStartOf="@+id/demo_play"
        app:layout_constraintTop_toTopOf="@+id/demo_play" />

    <ImageView
        android:id="@+id/demo_play"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/player_hex"
        android:src="@drawable/hex_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/how_to2"
        app:layout_constraintTop_toTopOf="@+id/how_to2" />

</android.support.constraint.ConstraintLayout>
